objects/StagingProperty_Surrogate__c.object
<CustomObject>
    <fields>
        <fullName>DWH_Deregistration_Date__c</fullName>
        <label>DWH:Deregistration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DWH_Registration_date__c</fullName>
        <label>DWH:Registration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LoanSurrogateExternalID__c</fullName>
        <label>LoanSurrogateExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_External_Id__c</fullName>
        <label>Property External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_SurrogateExternalID__c</fullName>
        <externalId>true</externalId>
        <label>Property/SurrogateExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>StagingProperty/Surrogate</label>
    <nameField>
        <label>StagingProperty/Surrogate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StagingProperty/Surrogate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>